src/test/deca/syntax/valid/print/print-float.deca
// Description:
//    Programme minimaliste affichant un nombre flottant.
//
// Résultats:
//    4.2
//
// Historique:
//    créé le 09/01/2025

{
    println(4.2);
}
